# doubletap

./: .gitignore  20-osu-intercept.yaml  70-doubletap-uinput.rules  70-osu-intercept-uinput.rules  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  audio.c  audio.h  config.c  config.h  config.yaml  doubletap.service.in  doubletapd.c  evdev_input.c  evdev_input.h  example-config.yaml  frame_handler.c  frame_handler.h  lifecycle.c  lifecycle.h  main.c  osu-intercept.c  osu-intercept.service  osu-intercept.service.in  osu-interceptd.c  privdrop.c  privdrop.h  prompt.txt  socd.c  socd.h  uinput_output.c  uinput_output.h  wobbleclick
packaging/arch/: PKGBUILD  osu-intercept.install
